--- a/net/dccp/Kconfig
+++ b/net/dccp/Kconfig
@@ -34,7 +34,11 @@ config IP_DCCP_FREEZE
 	  This can be used e.g. when the a mobile node and predicts a
 	  disconnection to avoid losing packets.
 
-	  Currently not implemented in any CCID.
+	  Currently only implemented for TFRC (CCID3) [0].
+
+	  [0] Olivier Mehani, Roksana Boreli and Thierry Ernst. Analysis of
+	  TFRC in disconnected scenarios and performance improvements with
+	  Freeze-DCCP. In ACM MobiArch 2009.
 
 	  If in doubt, say N.
 
