--- a/net/dccp/ccids/Kconfig
+++ b/net/dccp/ccids/Kconfig
@@ -83,4 +83,10 @@ config IP_DCCP_TFRC_LIB
 
 config IP_DCCP_TFRC_DEBUG
 	def_bool y if IP_DCCP_CCID3_DEBUG
+
+config IP_DCCP_CCID3_FREEZE
+	def_bool y if IP_DCCP_FREEZE
+
+config IP_DCCP_CCID3_FREEZE_DEBUG
+	def_bool y if IP_DCCP_FREEZE_DEBUG
 endmenu
