--- a/net/dccp/Makefile
+++ b/net/dccp/Makefile
@@ -13,6 +13,7 @@ dccp-$(CONFIG_IP_DCCP_TFRC_LIB) += ccids/lib/tfrc.o		\
 				   ccids/lib/tfrc_equation.o	\
 				   ccids/lib/packet_history.o	\
 				   ccids/lib/loss_interval.o
+dccp-$(CONFIG_IP_DCCP_CCID3_FREEZE) += ccids/ccid3_freeze.o
 
 dccp_ipv4-y := ipv4.o
 
